<resources>
    <string name="app_name">NFC Medical</string>
  
    <string-array name="severities">
        <item>mild</item>
        <item>moderate</item>
        <item>severe</item>
    </string-array>
  
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signUp">SignUp</string>
    <string name="last_name">LastName</string>
    <string name="first_name">FirstName</string>
    <string name="signup">SignUp</string>
    <string name="loginhere">Login Instead</string>
    <string name="date">Jan 01 2020</string>
    <string name="signuphere">SignUp Instead</string>
    <string name="email">Email</string>
    <string name="run">Run</string>
    <string name="emtLogin">EMT Login</string>
    <string name="scan">Scan</string>
    <string name="userLogin">User Login</string>
    
    <string-array name="categories">
        <item>Emergency Contacts</item>
        <item>Allergies</item>
        <item>Medical Conditions</item>
        <item>Medications</item>
        <item>Immunizations</item>
    </string-array>
</resources>